ajustes no alinhamento de todas as tabelas

--- a/src/views/pages/cadastrarEstoque.ejs
+++ b/src/views/pages/cadastrarEstoque.ejs
@@ -49,7 +49,7 @@
                   <div class="col-md-2">
                      <div id="tombo_inicial-div" class="mb-3 text-center">
                         <label class="form-label fw-bold">Tombo Inicial</label>
-                        <input id="tombo_inicial" type="text" class="form-control" name="tombo" readonly>
+                        <input id="tombo_inicial" type="text" class="form-control" name="tombo" readonly disabled>
                      </div>
                   </div>
 
