--- a/src/views/pages/saidaEstoque.ejs
+++ b/src/views/pages/saidaEstoque.ejs
@@ -87,14 +87,14 @@
                         <div id="doc_saida-div">
                            <label class="form-label fw-bold">Termo de Responsabilidade</label>
                            <input style="background-color: var(secondary-color) !important;" name="doc_saida"
-                              id="doc_saida" type="text" class="form-control mb-2" readonly>
+                              id="doc_saida" type="text" class="form-control mb-2" readonly disabled>
                         </div>
 
                      </div>
                      <div class="col-md-4">
                         <div id="referencia-div">
                            <label class="form-label fw-bold">NUP (Suite)</label>
-                           <input id="referencia" type="text" class="form-control mb-2">
+                           <input id="referencia" type="text" class="form-control mb-2" placeholder= "somente números">
                         </div>
 
                      </div>
@@ -135,15 +135,14 @@
                      <div class="col-md-4">
                         <div id="mf_recebedor-div" class="mb-1">
                            <label class="form-label fw-bold">Mat. Funcional</label>
-                           <input id="mf_recebedor" type="text" class="form-control mb-2" maxlength="11">
+                           <input id="mf_recebedor" type="text" class="form-control mb-2" maxlength="11" placeholder="somente números">
                         </div>
                      </div>
 
                      <div class="col-md-4">
                         <div id="tel_recebedor-div" class="mb-1">
                            <label class="form-label fw-bold">Telefone</label>
-                           <input id="tel_recebedor" type="tel" class="form-control mb-2"
-                              placeholder="somente números">
+                           <input id="tel_recebedor" type="tel" class="form-control mb-2" placeholder="somente números">
                         </div>
                      </div>
 
