--- a/src/views/pages/tabelaEstoque.ejs
+++ b/src/views/pages/tabelaEstoque.ejs
@@ -92,6 +92,11 @@
    }
 
    /* Ajuste das colunas */
+   .table-container th:nth-child(1), /* ID */
+   .table-container td:nth-child(1) {
+      width: 3%;
+   }
+
    .table-container th:nth-child(2), /* Data de entrada */
    .table-container td:nth-child(2) {
       width: 6%;
