--- a/src/views/pages/tabelaEstoqueEdit.ejs
+++ b/src/views/pages/tabelaEstoqueEdit.ejs
@@ -44,7 +44,7 @@
                   <div id="tombo-div" class="mb-3 text-center">
                      <label class="form-label fw-bold">Tombo</label>
                      <input id="tombo" type="number" class="form-control" name="tombo"
-                        value="<%= item.tombo %>" readonly>
+                        value="<%= item.tombo %>" readonly disabled>
                   </div>
                </div>
 
